# agougif

./: .gitignore  README.md  pyproject.toml
src/agougif/: __init__.py
